objects/Flosum__Branch__c.object
<CustomObject><fields><fullName>SCA_Integration_Status__c</fullName><description>Work: W-000175
Summary: Static Code Analysis integration review status.</description><externalId>false</externalId><label>SCA Integration Status</label><required>false</required><trackFeedHistory>false</trackFeedHistory><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Pending</fullName><default>false</default><label>Pending</label></value><value><fullName>Queued</fullName><default>false</default><label>Queued</label></value><value><fullName>Successful</fullName><default>false</default><label>Successful</label></value><value><fullName>Failure</fullName><default>false</default><label>Failure</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Has_Apex_Code__c</fullName><defaultValue>false</defaultValue><description>Work: W-000080
Summary: The value is automatically updated whenever new Apex Classes are added to the Branch.</description><externalId>false</externalId><inlineHelpText>The value is automatically updated whenever new Apex Classes are added to the Branch.</inlineHelpText><label>Has Apex Code</label><trackFeedHistory>false</trackFeedHistory><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Checkbox</type></fields><fields><fullName>Is_SCA_Passed__c</fullName><defaultValue>false</defaultValue><externalId>false</externalId><label>Is SCA Passed?</label><trackFeedHistory>false</trackFeedHistory><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Checkbox</type></fields><fields><fullName>Code_Coverage_Met__c</fullName><defaultValue>false</defaultValue><externalId>false</externalId><label>Code Coverage Met</label><trackFeedHistory>false</trackFeedHistory><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Checkbox</type></fields></CustomObject>